Display wish Knowledge in dashboard: Fix layout bug for license info by taking out rowbase class and imitating its layout #419070450369688

--- a/src/TrueOrFalse.Frontend.Web/Views/Knowledge/Knowledge.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Knowledge/Knowledge.less
@@ -165,13 +165,24 @@
 
 
 /*------------------------------------------------------
-    Wishknowledge Categories
+    Wishknowledge Categories and Sets
 -------------------------------------------------------*/
 
 #wishKnowledge {
     margin-top: 20px;
     margin-bottom: 20px;
     padding-bottom: 20px;
+    
+    
+    /*temporary stuff to imitate rowbase to get same layout for box like other elements on page without having to deal with the other stuff that comes with rowbase and e.g. disturbs layout of license information*/
+    background-color: white;
+    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.16), 0 1px 0px rgba(0, 0, 0, 0.23);
+    border-radius: 4px;
+    border: 1px solid #dddddd;
+    margin-left: 0;
+    margin-right: 0;
+    /*end of temporary stoff*/
+
 
     .wishKnowledgeNavRow {
         display: flex;
